        both at the R level, with \code{attr} and \code{attributes}, and
        at the C API level, with \code{SET_ATTRIB}.  Getting the attributes
        of a symbol returns NULL.  Previously (and also in R-3.4.0),
        attributes could be attached to symbols, but they were lost
        when a workspace was saved and restored.
  \item The default \code{size} for \code{new.env} is now \code{NA}, which
        gives an internal default, which now varies depending on the
        platform and configuration options.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Fixed a bug illustrated by the following:
\preformatted{    a <- as.integer(NA); e <- new.env(size=a); print(a)
}
        The value printed was previously 0 rather than NA.
        This bug also exists in R Core versions to at least R-3.4.0.
  }}
}


\section{CHANGES IN VERSION RELEASED 2017-06-09}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item pqR now uses a new garbage collector and new schemes for memory
        layout.  Objects are represented more compactly, much more compactly
        if ``compressed pointers'' are used. Garbage collection is faster,
        and will have a more localized memory access/write pattern, which
        may be of significance for cache performance and for performance with
        functions like \code{mclapply} from the \code{parallel} package.

        The new garbage collection scheme uses a general-purpose Segmented
        Generational Garbage Collector, the source code for which is at
        https://gitlab.com/radfordneal/sggc
  }}

  \subsection{INSTALLATION}{
  \itemize{
  \item There is now an \code{--enable-compressed-pointers} option to
        \code{configure}.  When included, pqR will be built with 
        32-bit compressed pointers, which considerably reduces
        memory usage (especially if many small objects are used) 
        on a system with 64-bit pointers (slightly on
        a system with 32-bit pointers).  Use of compressed pointers